Project is done somewhat

--- a/K2_Engine/imgui.ini
+++ b/K2_Engine/imgui.ini
@@ -203,3 +203,18 @@ Pos=60,60
 Size=248,174
 Collapsed=0
 
+[Window][Transform asteroid1]
+Pos=60,60
+Size=248,174
+Collapsed=0
+
+[Window][Transform asteroid2]
+Pos=60,60
+Size=248,174
+Collapsed=0
+
+[Window][Transform asteroid3]
+Pos=60,60
+Size=248,174
+Collapsed=0
+
